Fixed forward and backward

--- a/Offline 2/1605053.ipynb
+++ b/Offline 2/1605053.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 256,
    "metadata": {
     "collapsed": true
    },
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 257,
    "outputs": [],
    "source": [
     "# get stationary dustribution of transition matrix\n",
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 258,
    "outputs": [],
    "source": [
     "def estimate_sequence(state_transition_matrix:np.ndarray, gaussian_params: np.ndarray, initial_state_probability:np.ndarray, observations:np.ndarray, state_count: int) -> List[int]:\n",
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 259,
    "outputs": [],
    "source": [
     "# Viterbi algorithm\n",
@@ -90,16 +90,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 260,
    "outputs": [],
    "source": [
     "def forward(state_transition_matrix: np.ndarray, state_count:int, observations: np.ndarray, emission_matrix: np.ndarray, initial_transition_probability: np.ndarray) -> np.ndarray:\n",
     "    observation_count = observations.shape[0]\n",
     "    alpha = np.ndarray((state_count, observation_count), dtype=float64)\n",
     "    alpha[:,0] = initial_transition_probability * emission_matrix[:,0]\n",
-    "    for i in range(observation_count):\n",
+    "    alpha[:,0] /= np.sum(alpha[:,0])\n",
+    "\n",
+    "    for i in range(1, observation_count):\n",
     "        prob = alpha[:,i-1] * state_transition_matrix * emission_matrix[:,i].reshape(-1,1)\n",
     "        alpha[:,i] = np.sum(prob, axis=1)\n",
+    "        alpha[:,i] /= np.sum(alpha[:,i])\n",
     "\n",
     "    return alpha"
    ],
@@ -112,16 +115,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 261,
    "outputs": [],
    "source": [
     "def backward(state_transition_matrix: np.ndarray, state_count:int, observations: np.ndarray, emission_matrix: np.ndarray) -> np.ndarray:\n",
-    "    observation_count = observations[0]\n",
+    "    observation_count = observations.shape[0]\n",
     "    beta = np.ndarray((state_count, observation_count), dtype=float64)\n",
     "    beta[:,-1] = 1\n",
+    "\n",
     "    for i in range(observation_count-2, -1, -1):\n",
     "        prob = beta[:, i+1] * state_transition_matrix * emission_matrix[:, i+1].reshape(-1,1)\n",
-    "        beta[:,i] = np.sum(prob)\n",
+    "        beta[:,i] = np.sum(prob, axis=1)\n",
+    "        beta[:,i] /= np.sum(beta[:,i])\n",
     "\n",
     "    return beta"
    ],
@@ -134,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 262,
    "outputs": [],
    "source": [
     "# Baum-Welch Learning\n",
@@ -159,8 +164,7 @@
     "        xi_w = np.sum(xi_k, axis=1).reshape(-1,1).T\n",
     "        xi = xi / xi_w\n",
     "\n",
-    "        state_transition_matrix = np.sum(xi, axis=0) / np.sum(gamma, axis=1)\n",
-    "        "
+    "        state_transition_matrix = np.sum(xi, axis=0) / np.sum(gamma, axis=1)\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -171,13 +175,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 263,
    "outputs": [
     {
      "data": {
       "text/plain": "(1000, 1)"
      },
-     "execution_count": 26,
+     "execution_count": 263,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,13 +200,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 264,
    "outputs": [
     {
      "data": {
       "text/plain": "array([[200, 100],\n       [ 10,  10]])"
      },
-     "execution_count": 27,
+     "execution_count": 264,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,13 +233,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 265,
    "outputs": [
     {
      "data": {
       "text/plain": "(2,)"
      },
-     "execution_count": 28,
+     "execution_count": 265,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 266,
    "outputs": [],
    "source": [
     "hidden_path = viterbi(transition_matrix, gaussian_parameters, initial_distribution, observed_states, no_of_states, index_state_map)"
@@ -271,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 267,
    "outputs": [
     {
      "name": "stdout",
@@ -301,52 +305,6 @@
     "with open('./my_output/states_Viterbi_wo_learning.txt', 'w') as f:\n",
     "    for item in hidden_path:\n",
     "        f.write(item+'\\n')"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[[ 1  2]\n",
-      "  [ 3  4]]\n",
-      "\n",
-      " [[ 5  6]\n",
-      "  [ 7  8]]\n",
-      "\n",
-      " [[ 9 10]\n",
-      "  [11 12]]]\n",
-      "(3, 2, 2)\n",
-      "[[ 3  7]\n",
-      " [11 15]\n",
-      " [19 23]]\n",
-      "(3, 2)\n",
-      "[[10]\n",
-      " [26]\n",
-      " [42]]\n",
-      "(3, 1)\n"
-     ]
-    }
-   ],
-   "source": [
-    "a = np.arange(1,13).reshape((3,2,2))\n",
-    "print(a)\n",
-    "print(a.shape)\n",
-    "a = np.sum(a, axis=2)\n",
-    "print(a)\n",
-    "print(a.shape)\n",
-    "a = np.sum(a, axis=1).reshape(-1,1)\n",
-    "print(a)\n",
-    "print(a.shape)"
    ],
    "metadata": {
     "collapsed": false,
