Minor bug in Baum-Welch

--- a/Offline 2/1605053.ipynb
+++ b/Offline 2/1605053.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -15,13 +15,12 @@
     "from scipy.linalg import eig\n",
     "from scipy.stats import norm\n",
     "from numpy import float64, longdouble\n",
-    "from typing import List\n",
-    "from sklearn.preprocessing import normalize"
+    "from typing import List"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "# get stationary dustribution of transition matrix\n",
@@ -41,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "def estimate_sequence(state_transition_matrix:np.ndarray, gaussian_params: np.ndarray, initial_state_probability:np.ndarray, observations:np.ndarray, state_count: int) -> List[int]:\n",
@@ -73,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "# Viterbi algorithm\n",
@@ -90,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "def forward(state_transition_matrix: np.ndarray, state_count:int, observations: np.ndarray, emission_matrix: np.ndarray, initial_transition_probability: np.ndarray) -> np.ndarray:\n",
@@ -115,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "def backward(state_transition_matrix: np.ndarray, state_count:int, observations: np.ndarray, emission_matrix: np.ndarray) -> np.ndarray:\n",
@@ -139,32 +138,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "# Baum-Welch Learning\n",
     "def baum_welch(state_transition_matrix: np.ndarray, state_count:int, observations: np.ndarray, gaussian_params:np.ndarray, initial_transition_probability: np.ndarray, no_of_iterations:int):\n",
-    "    observation_count = observations[0]\n",
+    "    observation_count = observations.shape[0]\n",
     "\n",
     "    for _ in range(no_of_iterations):\n",
     "        emission_matrix = norm(loc=gaussian_params[0,:], scale=gaussian_params[1,:]).pdf(observations).T\n",
     "        alpha = forward(state_transition_matrix, state_count, observations, emission_matrix, initial_transition_probability)\n",
     "        beta = backward(state_transition_matrix, state_count, observations, emission_matrix)\n",
-    "        gamma = normalize(alpha * beta, axis=1)\n",
-    "        xi = np.ndarray((observation_count, state_count, state_count), dtype=longdouble)\n",
-    "        for t in range(observation_count):\n",
+    "        gamma = alpha * beta\n",
+    "        for i in range(observation_count):\n",
+    "            gamma[:,i] /= np.sum(gamma[:,i])\n",
+    "\n",
+    "        # gamma /= np.sum(gamma, axis=1)\n",
+    "\n",
+    "        xi = np.ndarray((observation_count-1, state_count, state_count), dtype=longdouble)\n",
+    "        for t in range(observation_count-1):\n",
     "            for i in range(state_count):\n",
     "                for j in range(state_count):\n",
-    "                    xi[t,i,j] = alpha[i,t] * state_transition_matrix[i,j] * beta[j,t+1] * emission_matrix[j,t+i]\n",
+    "                    xi[t,i,j] = alpha[i,t] * state_transition_matrix[i,j] * beta[j,t+1] * emission_matrix[j,t+1]\n",
     "\n",
-    "        for t in range(observation_count):\n",
-    "            xi[t,:,:] = alpha[:,t] * state_transition_matrix * beta[:,t+1] * emission_matrix[:,t+1]\n",
+    "        # for t in range(observation_count):\n",
+    "        #     xi[t,:,:] = alpha[:,t] * state_transition_matrix * beta[:,t+1] * emission_matrix[:,t+1]\n",
     "\n",
-    "        xi_k = np.sum(xi, axis=2)\n",
-    "        xi_w = np.sum(xi_k, axis=1).reshape(-1,1).T\n",
-    "        xi = xi / xi_w\n",
+    "        for t in range(observation_count-1):\n",
+    "            xi[t,:,:] /= np.sum(xi[t,:,:])\n",
     "\n",
-    "        state_transition_matrix = np.sum(xi, axis=0) / np.sum(gamma, axis=1)\n"
+    "        # xi_k = np.sum(xi, axis=2)\n",
+    "        # xi_w = np.sum(xi_k, axis=1).reshape(-1,1).T\n",
+    "        # xi = xi / xi_w\n",
+    "\n",
+    "        state_transition_matrix = np.sum(xi, axis=0)\n",
+    "        for i in range(state_count):\n",
+    "            state_transition_matrix[i,:] /= np.sum(state_transition_matrix[i,:])\n",
+    "\n",
+    "        for i in range(state_count):\n",
+    "            gaussian_params[0,i] = np.sum(gamma[i,:].reshape(-1,1) * observations) / np.sum(gamma[i,:])\n",
+    "            gaussian_params[1,i] = np.sqrt(np.sum(gamma[i,:].reshape(-1,1) * (observations - gaussian_params[0,i])**2) / np.sum(gamma[i,:]))\n",
+    "\n",
+    "    return state_transition_matrix, gaussian_params"
    ],
    "metadata": {
     "collapsed": false,
@@ -175,13 +190,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 8,
    "outputs": [
     {
      "data": {
       "text/plain": "(1000, 1)"
      },
-     "execution_count": 263,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,13 +215,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 9,
    "outputs": [
     {
      "data": {
       "text/plain": "array([[200, 100],\n       [ 10,  10]])"
      },
-     "execution_count": 264,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,13 +248,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 10,
    "outputs": [
     {
      "data": {
       "text/plain": "(2,)"
      },
-     "execution_count": 265,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "hidden_path = viterbi(transition_matrix, gaussian_parameters, initial_distribution, observed_states, no_of_states, index_state_map)"
@@ -275,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
@@ -305,6 +320,114 @@
     "with open('./my_output/states_Viterbi_wo_learning.txt', 'w') as f:\n",
     "    for item in hidden_path:\n",
     "        f.write(item+'\\n')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[[2.88898602e-316, 0.00000000e+000],\n        [7.23803648e+271, 4.14826285e-114]],\n\n       [[7.47555494e+247, 7.69846980e+218],\n        [9.92152666e+247, 1.87725413e-009]],\n\n       [[6.65429312e+246, 5.98147386e-154],\n        [6.01346953e-154, 0.00000000e+000]]])"
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = np.ndarray((3,2,2))\n",
+    "a"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[8.14098425e+247, 7.69846980e+218],\n       [7.23803648e+271, 1.87725413e-009]])"
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b = np.sum(a, axis=0)\n",
+    "b"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [],
+   "source": [
+    "a, b = baum_welch(transition_matrix, no_of_states, observed_states, gaussian_parameters, initial_distribution, 5)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[0.60623075, 0.39376925],\n       [0.19902263, 0.80097737]], dtype=float128)"
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[150, 113],\n       [  1,  22]])"
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b"
    ],
    "metadata": {
     "collapsed": false,
