Workinggit add .! Only thing left is to vectorize the code

--- a/Offline 2/1605053.ipynb
+++ b/Offline 2/1605053.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 525,
    "metadata": {
     "collapsed": true
    },
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 526,
    "outputs": [],
    "source": [
     "# get stationary dustribution of transition matrix\n",
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 527,
    "outputs": [],
    "source": [
     "def estimate_sequence(state_transition_matrix:np.ndarray, gaussian_params: np.ndarray, initial_state_probability:np.ndarray, observations:np.ndarray, state_count: int) -> List[int]:\n",
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 528,
    "outputs": [],
    "source": [
     "# Viterbi algorithm\n",
@@ -89,11 +89,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 529,
    "outputs": [],
    "source": [
-    "def forward(state_transition_matrix: np.ndarray, state_count:int, observations: np.ndarray, emission_matrix: np.ndarray, initial_transition_probability: np.ndarray) -> np.ndarray:\n",
-    "    observation_count = observations.shape[0]\n",
+    "def forward(state_transition_matrix: np.ndarray, state_count:int, observation_count:int , emission_matrix: np.ndarray, initial_transition_probability: np.ndarray) -> np.ndarray:\n",
     "    alpha = np.ndarray((state_count, observation_count), dtype=float64)\n",
     "    alpha[:,0] = initial_transition_probability * emission_matrix[:,0]\n",
     "    alpha[:,0] /= np.sum(alpha[:,0])\n",
@@ -114,18 +113,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 530,
    "outputs": [],
    "source": [
-    "def backward(state_transition_matrix: np.ndarray, state_count:int, observations: np.ndarray, emission_matrix: np.ndarray) -> np.ndarray:\n",
-    "    observation_count = observations.shape[0]\n",
+    "def backward(state_transition_matrix: np.ndarray, state_count:int, observation_count: int, emission_matrix: np.ndarray) -> np.ndarray:\n",
     "    beta = np.ndarray((state_count, observation_count), dtype=float64)\n",
     "    beta[:,-1] = 1\n",
     "\n",
     "    for i in range(observation_count-2, -1, -1):\n",
-    "        prob = beta[:, i+1] * state_transition_matrix * emission_matrix[:, i+1].reshape(-1,1)\n",
-    "        beta[:,i] = np.sum(prob, axis=1)\n",
+    "        for k in range(state_count):\n",
+    "            prob = 0\n",
+    "            for l in range(state_count):\n",
+    "                prob += beta[l, i+1] * state_transition_matrix[k,l] * emission_matrix[l, i]\n",
+    "            beta[k,i] = prob\n",
     "        beta[:,i] /= np.sum(beta[:,i])\n",
+    "    # for i in range(observation_count-2, -1, -1):\n",
+    "    #     prob = beta[:, i+1] * state_transition_matrix.T * emission_matrix[:, i+1].reshape(-1,1)\n",
+    "    #     beta[:,i] = np.sum(prob, axis=1)\n",
+    "    #     beta[:,i] /= np.sum(beta[:,i])\n",
     "\n",
     "    return beta"
    ],
@@ -138,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 531,
    "outputs": [],
    "source": [
     "# Baum-Welch Learning\n",
@@ -146,9 +151,14 @@
     "    observation_count = observations.shape[0]\n",
     "\n",
     "    for _ in range(no_of_iterations):\n",
+    "        # print('Running iteration {}'.format(k))\n",
+    "        # print('Transition matrix:')\n",
+    "        # print(state_transition_matrix)\n",
+    "        # print('Gaussian parameters:')\n",
+    "        # print(gaussian_params)\n",
     "        emission_matrix = norm(loc=gaussian_params[0,:], scale=gaussian_params[1,:]).pdf(observations).T\n",
-    "        alpha = forward(state_transition_matrix, state_count, observations, emission_matrix, initial_transition_probability)\n",
-    "        beta = backward(state_transition_matrix, state_count, observations, emission_matrix)\n",
+    "        alpha = forward(state_transition_matrix, state_count, observation_count, emission_matrix, initial_transition_probability)\n",
+    "        beta = backward(state_transition_matrix, state_count, observation_count, emission_matrix)\n",
     "        gamma = alpha * beta\n",
     "        for i in range(observation_count):\n",
     "            gamma[:,i] /= np.sum(gamma[:,i])\n",
@@ -179,6 +189,12 @@
     "            gaussian_params[0,i] = np.sum(gamma[i,:].reshape(-1,1) * observations) / np.sum(gamma[i,:])\n",
     "            gaussian_params[1,i] = np.sqrt(np.sum(gamma[i,:].reshape(-1,1) * (observations - gaussian_params[0,i])**2) / np.sum(gamma[i,:]))\n",
     "\n",
+    "        # print('At the end of iteration {}'.format(k))\n",
+    "        # print('Transition matrix:')\n",
+    "        # print(state_transition_matrix)\n",
+    "        # print('Gaussian parameters:')\n",
+    "        # print(gaussian_params)\n",
+    "\n",
     "    return state_transition_matrix, gaussian_params"
    ],
    "metadata": {
@@ -190,13 +206,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 532,
    "outputs": [
     {
      "data": {
       "text/plain": "(1000, 1)"
      },
-     "execution_count": 8,
+     "execution_count": 532,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,13 +231,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 533,
    "outputs": [
     {
      "data": {
-      "text/plain": "array([[200, 100],\n       [ 10,  10]])"
+      "text/plain": "array([[200., 100.],\n       [ 10.,  10.]])"
      },
-     "execution_count": 9,
+     "execution_count": 533,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,8 +251,9 @@
     "    transition_matrix = np.genfromtxt(islice(lines, 1, 1+no_of_states))\n",
     "\n",
     "with open('./Input/parameters.txt.txt', 'r') as lines:\n",
-    "    gaussian_parameters = np.genfromtxt(islice(lines, 1+no_of_states, 1+2*no_of_states), dtype=int)\n",
+    "    gaussian_parameters = np.genfromtxt(islice(lines, 1+no_of_states, 1+2*no_of_states))\n",
     "\n",
+    "# gaussian_parameters[1,:] = np.sqrt(gaussian_parameters[1,:])\n",
     "gaussian_parameters"
    ],
    "metadata": {
@@ -248,13 +265,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 534,
    "outputs": [
     {
      "data": {
       "text/plain": "(2,)"
      },
-     "execution_count": 10,
+     "execution_count": 534,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 535,
    "outputs": [],
    "source": [
     "hidden_path = viterbi(transition_matrix, gaussian_parameters, initial_distribution, observed_states, no_of_states, index_state_map)"
@@ -290,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 536,
    "outputs": [
     {
      "name": "stdout",
@@ -330,58 +347,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "array([[[2.88898602e-316, 0.00000000e+000],\n        [7.23803648e+271, 4.14826285e-114]],\n\n       [[7.47555494e+247, 7.69846980e+218],\n        [9.92152666e+247, 1.87725413e-009]],\n\n       [[6.65429312e+246, 5.98147386e-154],\n        [6.01346953e-154, 0.00000000e+000]]])"
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a = np.ndarray((3,2,2))\n",
-    "a"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "array([[8.14098425e+247, 7.69846980e+218],\n       [7.23803648e+271, 1.87725413e-009]])"
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "b = np.sum(a, axis=0)\n",
-    "b"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 537,
    "outputs": [],
    "source": [
-    "a, b = baum_welch(transition_matrix, no_of_states, observed_states, gaussian_parameters, initial_distribution, 5)"
+    "u, e, f, g, h, a, b = baum_welch(transition_matrix, no_of_states, observed_states, gaussian_parameters, initial_distribution, 5)"
    ],
    "metadata": {
     "collapsed": false,
@@ -392,13 +361,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 538,
    "outputs": [
     {
      "data": {
-      "text/plain": "array([[0.60623075, 0.39376925],\n       [0.19902263, 0.80097737]], dtype=float128)"
+      "text/plain": "array([[0.82795699, 0.17204301],\n       [0.21768707, 0.78231293]], dtype=float128)"
      },
-     "execution_count": 16,
+     "execution_count": 538,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,13 +384,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 539,
    "outputs": [
     {
      "data": {
-      "text/plain": "array([[150, 113],\n       [  1,  22]])"
+      "text/plain": "array([[150.1898689 , 100.20940296],\n       [  2.24318457,   2.95185791]])"
      },
-     "execution_count": 26,
+     "execution_count": 539,
      "metadata": {},
      "output_type": "execute_result"
     }
