--- a/Offline 2/1605053.ipynb
+++ b/Offline 2/1605053.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 525,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 526,
+   "execution_count": 30,
    "outputs": [],
    "source": [
     "# get stationary dustribution of transition matrix\n",
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 527,
+   "execution_count": 31,
    "outputs": [],
    "source": [
     "def estimate_sequence(state_transition_matrix:np.ndarray, gaussian_params: np.ndarray, initial_state_probability:np.ndarray, observations:np.ndarray, state_count: int) -> List[int]:\n",
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 528,
+   "execution_count": 32,
    "outputs": [],
    "source": [
     "# Viterbi algorithm\n",
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 529,
+   "execution_count": 33,
    "outputs": [],
    "source": [
     "def forward(state_transition_matrix: np.ndarray, state_count:int, observation_count:int , emission_matrix: np.ndarray, initial_transition_probability: np.ndarray) -> np.ndarray:\n",
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 530,
+   "execution_count": 34,
    "outputs": [],
    "source": [
     "def backward(state_transition_matrix: np.ndarray, state_count:int, observation_count: int, emission_matrix: np.ndarray) -> np.ndarray:\n",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 531,
+   "execution_count": 35,
    "outputs": [],
    "source": [
     "# Baum-Welch Learning\n",
@@ -206,13 +206,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 532,
+   "execution_count": 36,
    "outputs": [
     {
      "data": {
       "text/plain": "(1000, 1)"
      },
-     "execution_count": 532,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,13 +231,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 533,
+   "execution_count": 37,
    "outputs": [
     {
      "data": {
       "text/plain": "array([[200., 100.],\n       [ 10.,  10.]])"
      },
-     "execution_count": 533,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,13 +265,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 534,
+   "execution_count": 38,
    "outputs": [
     {
      "data": {
       "text/plain": "(2,)"
      },
-     "execution_count": 534,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 535,
+   "execution_count": 39,
    "outputs": [],
    "source": [
     "hidden_path = viterbi(transition_matrix, gaussian_parameters, initial_distribution, observed_states, no_of_states, index_state_map)"
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 536,
+   "execution_count": 40,
    "outputs": [
     {
      "name": "stdout",
@@ -347,10 +347,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 537,
+   "execution_count": 41,
    "outputs": [],
    "source": [
-    "u, e, f, g, h, a, b = baum_welch(transition_matrix, no_of_states, observed_states, gaussian_parameters, initial_distribution, 5)"
+    "a, b = baum_welch(transition_matrix, no_of_states, observed_states, gaussian_parameters, initial_distribution, 5)"
    ],
    "metadata": {
     "collapsed": false,
@@ -361,13 +361,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 538,
+   "execution_count": 42,
    "outputs": [
     {
      "data": {
       "text/plain": "array([[0.82795699, 0.17204301],\n       [0.21768707, 0.78231293]], dtype=float128)"
      },
-     "execution_count": 538,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,13 +384,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 539,
+   "execution_count": 43,
    "outputs": [
     {
      "data": {
       "text/plain": "array([[150.1898689 , 100.20940296],\n       [  2.24318457,   2.95185791]])"
      },
-     "execution_count": 539,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
