File output done

--- a/Offline 2/1605053.ipynb
+++ b/Offline 2/1605053.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "# get stationary dustribution of transition matrix\n",
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "def estimate_sequence(state_transition_matrix:np.ndarray, gaussian_params: np.ndarray, initial_state_probability:np.ndarray, observations:np.ndarray, state_count: int) -> List[int]:\n",
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "# Viterbi algorithm\n",
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "def forward(state_transition_matrix: np.ndarray, state_count:int, observation_count:int , emission_matrix: np.ndarray, initial_transition_probability: np.ndarray) -> np.ndarray:\n",
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "def backward(state_transition_matrix: np.ndarray, state_count:int, observation_count: int, emission_matrix: np.ndarray) -> np.ndarray:\n",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "# Baum-Welch Learning\n",
@@ -206,13 +206,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "outputs": [
     {
      "data": {
       "text/plain": "(1000, 1)"
      },
-     "execution_count": 36,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,13 +231,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "outputs": [
     {
      "data": {
       "text/plain": "array([[200., 100.],\n       [ 10.,  10.]])"
      },
-     "execution_count": 37,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,13 +265,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "outputs": [
     {
      "data": {
       "text/plain": "(2,)"
      },
-     "execution_count": 38,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "hidden_path = viterbi(transition_matrix, gaussian_parameters, initial_distribution, observed_states, no_of_states, index_state_map)"
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "a, b = baum_welch(transition_matrix, no_of_states, observed_states, gaussian_parameters, initial_distribution, 5)"
@@ -361,13 +361,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
    "outputs": [
     {
      "data": {
       "text/plain": "array([[0.82795699, 0.17204301],\n       [0.21768707, 0.78231293]], dtype=float128)"
      },
-     "execution_count": 42,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,19 +384,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 15,
    "outputs": [
     {
      "data": {
       "text/plain": "array([[150.1898689 , 100.20940296],\n       [  2.24318457,   2.95185791]])"
      },
-     "execution_count": 43,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "b"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [],
+   "source": [
+    "hidden_path_after_learning = viterbi(a, b, initial_distribution, observed_states, no_of_states, index_state_map)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# matching output and writing to file\n",
+    "viterbi_output = []\n",
+    "with open('./Output/states_Viterbi_after_learning.txt', 'r') as f:\n",
+    "    for line in f.readlines():\n",
+    "        viterbi_output.append(line.rstrip('\\n'))\n",
+    "\n",
+    "match = 0\n",
+    "\n",
+    "for item1, item2 in zip(viterbi_output, hidden_path_after_learning):\n",
+    "    if item1 == item2:\n",
+    "        match += 1\n",
+    "\n",
+    "print(match)\n",
+    "\n",
+    "pathlib.Path('./my_output').mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "with open('./my_output/states_Viterbi_after_learning.txt', 'w') as f:\n",
+    "    for item in hidden_path:\n",
+    "        f.write(item+'\\n')\n",
+    "        \n",
+    "with open('./my_output/learned_parameters.txt', 'w') as f:\n",
+    "    f.write('Transition matrix:\\n')\n",
+    "    np.savetxt(f, a, fmt='%1.5f')\n",
+    "    f.write('\\nGaussian parameters:\\n')\n",
+    "    np.savetxt(f, b, fmt='%1.5f')"
    ],
    "metadata": {
     "collapsed": false,
