More vectorization done

--- a/Offline 2/1605053.ipynb
+++ b/Offline 2/1605053.ipynb
@@ -151,19 +151,11 @@
     "    observation_count = observations.shape[0]\n",
     "\n",
     "    for _ in range(no_of_iterations):\n",
-    "        # print('Running iteration {}'.format(k))\n",
-    "        # print('Transition matrix:')\n",
-    "        # print(state_transition_matrix)\n",
-    "        # print('Gaussian parameters:')\n",
-    "        # print(gaussian_params)\n",
     "        emission_matrix = norm(loc=gaussian_params[0,:], scale=gaussian_params[1,:]).pdf(observations).T\n",
     "        alpha = forward(state_transition_matrix, state_count, observation_count, emission_matrix, initial_transition_probability)\n",
     "        beta = backward(state_transition_matrix, state_count, observation_count, emission_matrix)\n",
     "        gamma = alpha * beta\n",
-    "        for i in range(observation_count):\n",
-    "            gamma[:,i] /= np.sum(gamma[:,i])\n",
-    "\n",
-    "        # gamma /= np.sum(gamma, axis=1)\n",
+    "        gamma /= np.sum(gamma, axis=0)\n",
     "\n",
     "        xi = np.ndarray((observation_count-1, state_count, state_count), dtype=longdouble)\n",
     "        for t in range(observation_count-1):\n",
@@ -188,12 +180,6 @@
     "        for i in range(state_count):\n",
     "            gaussian_params[0,i] = np.sum(gamma[i,:].reshape(-1,1) * observations) / np.sum(gamma[i,:])\n",
     "            gaussian_params[1,i] = np.sqrt(np.sum(gamma[i,:].reshape(-1,1) * (observations - gaussian_params[0,i])**2) / np.sum(gamma[i,:]))\n",
-    "\n",
-    "        # print('At the end of iteration {}'.format(k))\n",
-    "        # print('Transition matrix:')\n",
-    "        # print(state_transition_matrix)\n",
-    "        # print('Gaussian parameters:')\n",
-    "        # print(gaussian_params)\n",
     "\n",
     "    return state_transition_matrix, gaussian_params"
    ],
@@ -451,12 +437,12 @@
     "with open('./my_output/states_Viterbi_after_learning.txt', 'w') as f:\n",
     "    for item in hidden_path:\n",
     "        f.write(item+'\\n')\n",
-    "        \n",
+    "\n",
     "with open('./my_output/learned_parameters.txt', 'w') as f:\n",
     "    f.write('Transition matrix:\\n')\n",
-    "    np.savetxt(f, a, fmt='%1.5f')\n",
+    "    np.savetxt(f, a, fmt='%1.7f')\n",
     "    f.write('\\nGaussian parameters:\\n')\n",
-    "    np.savetxt(f, b, fmt='%1.5f')"
+    "    np.savetxt(f, b, fmt='%1.6f')"
    ],
    "metadata": {
     "collapsed": false,
