Vectorized state transition matrix calculation

--- a/Offline 2/1605053.ipynb
+++ b/Offline 2/1605053.ipynb
@@ -163,19 +163,11 @@
     "                for j in range(state_count):\n",
     "                    xi[t,i,j] = alpha[i,t] * state_transition_matrix[i,j] * beta[j,t+1] * emission_matrix[j,t+1]\n",
     "\n",
-    "        # for t in range(observation_count):\n",
-    "        #     xi[t,:,:] = alpha[:,t] * state_transition_matrix * beta[:,t+1] * emission_matrix[:,t+1]\n",
-    "\n",
     "        for t in range(observation_count-1):\n",
     "            xi[t,:,:] /= np.sum(xi[t,:,:])\n",
     "\n",
-    "        # xi_k = np.sum(xi, axis=2)\n",
-    "        # xi_w = np.sum(xi_k, axis=1).reshape(-1,1).T\n",
-    "        # xi = xi / xi_w\n",
-    "\n",
     "        state_transition_matrix = np.sum(xi, axis=0)\n",
-    "        for i in range(state_count):\n",
-    "            state_transition_matrix[i,:] /= np.sum(state_transition_matrix[i,:])\n",
+    "        state_transition_matrix /= np.sum(state_transition_matrix, axis=1).reshape(-1,1)\n",
     "\n",
     "        for i in range(state_count):\n",
     "            gaussian_params[0,i] = np.sum(gamma[i,:].reshape(-1,1) * observations) / np.sum(gamma[i,:])\n",
