--- a/Offline 2/1605053.ipynb
+++ b/Offline 2/1605053.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "# get stationary dustribution of transition matrix\n",
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "outputs": [],
    "source": [
     "def estimate_sequence(state_transition_matrix:np.ndarray, gaussian_params: np.ndarray, initial_state_probability:np.ndarray, observations:np.ndarray, state_count: int) -> List[int]:\n",
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "# Viterbi algorithm\n",
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "def forward(state_transition_matrix: np.ndarray, state_count:int, observation_count:int , emission_matrix: np.ndarray, initial_transition_probability: np.ndarray) -> np.ndarray:\n",
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "def backward(state_transition_matrix: np.ndarray, state_count:int, observation_count: int, emission_matrix: np.ndarray) -> np.ndarray:\n",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "# Baum-Welch Learning\n",
@@ -168,9 +168,8 @@
     "        state_transition_matrix = np.sum(xi, axis=0)\n",
     "        state_transition_matrix /= np.sum(state_transition_matrix, axis=1).reshape(-1,1)\n",
     "\n",
-    "        for i in range(state_count):\n",
-    "            gaussian_params[0,i] = np.sum(gamma[i,:].reshape(-1,1) * observations) / np.sum(gamma[i,:])\n",
-    "            gaussian_params[1,i] = np.sqrt(np.sum(gamma[i,:].reshape(-1,1) * (observations - gaussian_params[0,i])**2) / np.sum(gamma[i,:]))\n",
+    "        gaussian_params[0,:] = np.sum(gamma * observations.T, axis=1) / np.sum(gamma, axis=1)\n",
+    "        gaussian_params[1,:] = np.sqrt(np.sum(gamma * (observations.T - gaussian_params[0,:].reshape(-1,1)) ** 2, axis=1) / np.sum(gamma, axis=1))\n",
     "\n",
     "    return state_transition_matrix, gaussian_params"
    ],
@@ -183,13 +182,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "outputs": [
     {
      "data": {
       "text/plain": "(1000, 1)"
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,13 +207,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "outputs": [
     {
      "data": {
       "text/plain": "array([[200., 100.],\n       [ 10.,  10.]])"
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,13 +241,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "outputs": [
     {
      "data": {
       "text/plain": "(2,)"
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "hidden_path = viterbi(transition_matrix, gaussian_parameters, initial_distribution, observed_states, no_of_states, index_state_map)"
@@ -284,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
@@ -324,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "a, b = baum_welch(transition_matrix, no_of_states, observed_states, gaussian_parameters, initial_distribution, 5)"
@@ -338,13 +337,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "outputs": [
     {
      "data": {
       "text/plain": "array([[0.82795699, 0.17204301],\n       [0.21768707, 0.78231293]], dtype=float128)"
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,13 +360,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "outputs": [
     {
      "data": {
       "text/plain": "array([[150.1898689 , 100.20940296],\n       [  2.24318457,   2.95185791]])"
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "outputs": [],
    "source": [
     "hidden_path_after_learning = viterbi(a, b, initial_distribution, observed_states, no_of_states, index_state_map)"
@@ -398,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "outputs": [
     {
      "name": "stdout",
